[gd_scene load_steps=18 format=2]

[ext_resource path="res://resources/textures/Player_1_Swing_1.png" type="Texture" id=1]
[ext_resource path="res://resources/textures/Player_1_Swing_End.png" type="Texture" id=2]
[ext_resource path="res://resources/textures/Player_1_Idle.png" type="Texture" id=3]
[ext_resource path="res://resources/textures/Player_1_Swing_Start.png" type="Texture" id=4]
[ext_resource path="res://resources/textures/Player_1_Swing_2.png" type="Texture" id=5]
[ext_resource path="res://Player.gd" type="Script" id=6]
[ext_resource path="res://Song.gd" type="Script" id=7]
[ext_resource path="res://resources/sounds/music_start.tres" type="AudioStream" id=8]
[ext_resource path="res://resources/sounds/music_loop.ogg" type="AudioStream" id=9]
[ext_resource path="res://Cues.gd" type="Script" id=10]
[ext_resource path="res://resources/sounds/bat.tres" type="AudioStream" id=11]
[ext_resource path="res://Game.gd" type="Script" id=12]
[ext_resource path="res://resources/sounds/miss.tres" type="AudioStream" id=13]
[ext_resource path="res://resources/sounds/shoot.tres" type="AudioStream" id=14]
[ext_resource path="res://resources/sounds/hit.tres" type="AudioStream" id=15]
[ext_resource path="res://resources/sounds/longShoot.tres" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": false,
"name": "Swing",
"speed": 30.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 12 )

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 523.958, 246.748 )
frames = SubResource( 1 )
animation = "Idle"
script = ExtResource( 6 )

[node name="Song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
script = ExtResource( 7 )
loop = ExtResource( 9 )
start = ExtResource( 8 )

[node name="Cues" type="AudioStreamPlayer" parent="."]
script = ExtResource( 10 )
bat = ExtResource( 11 )
miss = ExtResource( 13 )
hit = ExtResource( 15 )
short = ExtResource( 14 )
long = ExtResource( 16 )
[connection signal="animation_finished" from="Player" to="Player" method="_on_AnimatedSprite_animation_finished"]
[connection signal="swing" from="Player" to="Cues" method="_on_Player_swing"]
[connection signal="cueEnded" from="Cues" to="." method="_on_Cues_cueEnded"]
[connection signal="missed" from="Cues" to="." method="_on_Cues_missed"]
[connection signal="scored" from="Cues" to="." method="_on_Cues_scored"]
